# AHOInmobiliaria-Django

./: .env.example  .gitignore  CLAUDE.md  GUIA_VENV.md  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
inmobiliaria/: admin.py  apps.py  forms.py  models.py
inmobiliaria/migrations/: 0001_initial.py  0002_city_delete_ciudades_delete_ejecuciones_and_more.py  0003_caracteristica_delete_caracteristicas_and_more.py
inmobiliaria/static/admin/css/: currency-widget.css
inmobiliaria/static/admin/js/: currency-formatter.js
